After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 778010 - vaapipostproc: doesn't scale according to src caps
vaapipostproc: doesn't scale according to src caps
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gstreamer-vaapi
git master
Other Linux
: Normal normal
: 1.10.4
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2017-02-01 05:19 UTC by Hyunjun Ko
Modified: 2017-02-01 15:13 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
vaapipostproc: set GST_VAAPI_POSTPROC_FLAG_SIZE according to src caps (1.40 KB, patch)
2017-02-01 05:40 UTC, Hyunjun Ko
committed Details | Review

Description Hyunjun Ko 2017-02-01 05:19:17 UTC
Test pipeline that doesn't work.
gst-launch-1.0 videotestsrc ! video/x-raw,width=1920,height=1080 ! vaapipostproc ! video/x-raw,format=I420,width=800,height=600 ! xvimagesink

Test pipeline that works.
gst-launch-1.0 videotestsrc ! video/x-raw,width=1920,height=1080 ! vaapipostproc width=800 height=600 ! video/x-raw,format=I420 ! xvimagesink

This is because it doesn't set GST_VAAPI_POSTPROC_FLAG_SIZE to postproc's flag in this case. Currently, only if width/height property is set by user, it does set.
Comment 1 Hyunjun Ko 2017-02-01 05:40:18 UTC
Created attachment 344679 [details] [review]
vaapipostproc: set GST_VAAPI_POSTPROC_FLAG_SIZE according to  src caps

A value of width/height property should be set to out caps,
if negotiation had been going properly.
So we can use srcpad_info when making decision of scaling.
Comment 2 Víctor Manuel Jáquez Leal 2017-02-01 14:45:08 UTC
Comment on attachment 344679 [details] [review]
vaapipostproc: set GST_VAAPI_POSTPROC_FLAG_SIZE according to  src caps

lgtm
Comment 3 Víctor Manuel Jáquez Leal 2017-02-01 14:56:40 UTC
This also should go in branch 1.10 (sadly the fix came after the release)
Comment 4 Víctor Manuel Jáquez Leal 2017-02-01 15:13:47 UTC
commit 7f69f679b12a042d09fe22845cca5a26ae800856
Author: Hyunjun Ko <zzoon@igalia.com>
Date:   Wed Feb 1 14:32:45 2017 +0900

    vaapipostproc: set GST_VAAPI_POSTPROC_FLAG_SIZE according to src caps

    A value of width/height property should be set to out caps,
    if negotiation had been going properly.
    So we can use srcpad_info when making decision of scaling.

    https://bugzilla.gnome.org/show_bug.cgi?id=778010